# zkWasm-C

./: README.md
c/hash/: build.ninja  hash-wasm.h  keccak.c  sha256.c
c/hash/include/: hash-wasm.h
c/hash/lib/: keccak.c  sha256.c
c/include/: sdk.h
c/rlp/include/: rlp.h
c/rlp/lib/: rlp.c
c/rlp/test/: test.c
c/sdk/include/: zkwasmsdk.h
c/sdk/lib/: sdk.c
hash/: build.ninja  sha256.c
hybrid/: Makefile  inner.ts  main.c
hybrid/rlp/: Makefile  inner.ts  main.c
hybrid/simple/: inner.ts
project/: Makefile
rust/sha256/: Cargo.toml  Makefile
rust/sha256/src/: lib.rs
scripts/: Makefile  build.sh  clean.sh
sdk/c/bls/lib/: bls.c
sdk/c/ecc/include/: bls.h  bn254.h
sdk/c/ecc/lib/: bls.c  bn254.c
sdk/c/hash/include/: hash-wasm.h
sdk/c/hash/lib/: poseidon.c  sha256.c
sdk/c/kvpair/include/: kvpair.h
sdk/c/kvpair/lib/: kvpair.c
sdk/c/rlp/include/: rlp.h
sdk/c/rlp/lib/: rlp.c
sdk/c/rlp/native/: native.c  test_data.txt
sdk/c/rlp/test/: Makefile  test.wasm
sdk/c/sdk/include/: zkwasmsdk.h
sdk/c/sdk/lib/: sdk.c
sdk/scripts/: Makefile  build.sh  clean.sh
tests/kvpair/: Makefile  test.c  test.sh
tests/poseidon/: Makefile  output.wasm  sdk.wasm  test.c
tests/rlp/: Makefile  test.c
tests/sha/: Makefile  test.c
