[package]
name = "zkwasm-sha256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.135"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]
#[lib]
#crate-type = ["cdylib"]
#crate-type = ["cdylib"]

[profile.dev]
rpath = true
